Added info boxes and checklist
Added in a template for the introduction to the code. Also added a checklist for myself as I begin to write the scripts for the project

--- a/GlacierAreaEstimateCalculator.ipynb
+++ b/GlacierAreaEstimateCalculator.ipynb
@@ -1,6 +1,55 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "91617b2a-b65e-4b09-9cd2-ce8b4de080f6",
+   "metadata": {},
+   "source": [
+    "## GLACIER AREA CALCULATOR ### \n",
+    "\n",
+    "This project will primarily use the USGS Python Package to identify, download and present Landsat imagery from 1985, 2005 and 2025 across several glacier mountain ranges across the world. \n",
+    "The mountain ranges will include:\n",
+    "- Kenai Mountains (Alaska)\n",
+    "- Swiss Alps\n",
+    "- *Insert Greenland/Himalayas maybe?*\n",
+    "This script will download and present the images in False Colour Composite, then will generate a classification to identify the ice area on the images and this classification will be used in each image to calculate the change in glacier area across glaciated areas on a global scale."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c614b627-b149-4f9b-b677-855a44f7bf72",
+   "metadata": {},
+   "source": [
+    "##TO DO LIST FOR THE STUDY## \n",
+    "\n",
+    "\n",
+    "----KENAI MOUNTAINS----\n",
+    "- Identify Landsat information on the USGS EE site and get the correct WRS path, etc.\n",
+    "- Download Landsat Images for Kenai Mountains first\n",
+    "- Clasification\n",
+    "- Area change calculation\n",
+    "- See if you can edit the image to show only the selected mountain range (Crop Stacked Landsat TIF)\n",
+    "- Maybe include some help() but ask Bob if it is something that is expected or required\n",
+    "\n",
+    "----Swiss Alps-----\n",
+    "- Same as above\n",
+    "- Try to select area with Alestchgletscher\n",
+    "\n",
+    "----GREENLAND/HIMALAYAS----\n",
+    "- Same as above\n",
+    "\n",
+    "\n",
+    "---AFTER LANDSAT DONE-----\n",
+    "- Generate a comparison Table/Template for all results acquired\n",
+    "- IF YOU HAVE TIME, maybe do a couple more glacier mountains\n",
+    "- Keep it that the script can be used to generate area as long as the correct info is input (ID, WRS, ETC..)\n",
+    "- Ask if an ArcGIS element is expected for the assignment\n",
+    "- Ask/Check how the how-to-guide is to be formatted (separate word doc in Git Repos/in the README/....\n",
+    "- Check how the final repos is to be submitted\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "7b030732-c4ea-4001-8c2f-b27816d32d24",
