Added Markdowns and KM Script
Added some Markdown for the script run through.
Began to add some script for the Kenai Mountains sections of the project

--- a/GlacierAreaEstimateCalculator.ipynb
+++ b/GlacierAreaEstimateCalculator.ipynb
@@ -71,51 +71,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "e34fb1c7-40d7-4863-aed3-8284108cf66d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Open and manually read the username from the .usgs_user file in the home directory\n",
+    "# Open and read the Username and Api Key/Token for the USGS account\n",
     "with open('C:/Users/couse/.usgs_user', 'r') as usertext:\n",
     "    username = usertext.read()\n",
-    "\n",
-    "#Open and manually read the password/token from the.usgs_token in the home directory\n",
     "with open('C:/Users/couse/.usgs_token', 'r') as tokentext:\n",
     "    password = tokentext.read()\n",
     "    \n",
-    "# Login to the API using the username and the token(API_KEY provided by the USGS) as password\n",
+    "# Log in using the above information in the script attached below\n",
     "login = api.login(username, password, save=True)\n",
     "\n",
-    "#Below the API Key (token) is extracted separately as it will be used for the functions later in the script\n",
+    "#The API Key (token) is extracted separately as it will be used in the script to search for and download Landsat imagery\n",
     "api_key = login['data']"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8fdd68c0-3912-4e0e-985d-248b45b085cd",
+   "metadata": {},
+   "source": [
+    "To identify and search for the required Landsat scenes in this study we are going to use the api.scene_search() function as this will be the primary method for getting the correct images before we download them. Below is some of the information we will need for the search"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
+   "id": "fc7dc9bf-dc07-4847-bff9-bf5737a260ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function scene_search in module usgs.api:\n",
+      "\n",
+      "scene_search(dataset, max_results=5000, metadata_type=None, start_date=None, end_date=None, ll=None, ur=None, lat=None, lng=None, distance=100, where=None, starting_number=1, sort_order='DESC', api_key=None)\n",
+      "    :param dataset:\n",
+      "        USGS dataset (e.g. EO1_HYP_PUB, LANDSAT_8)\n",
+      "    :param lat:\n",
+      "        Latitude\n",
+      "    :param lng:\n",
+      "        Longitude\n",
+      "    :param distance:\n",
+      "        Distance in meters used to for a radial search\n",
+      "    :param ll:\n",
+      "        Dictionary of longitude/latitude coordinates for the lower left corner\n",
+      "        of a bounding box search. e.g. { \"longitude\": 0.0, \"latitude\": 0.0 }\n",
+      "    :param ur:\n",
+      "        Dictionary of longitude/latitude coordinates for the upper right corner\n",
+      "        of a bounding box search. e.g. { \"longitude\": 0.0, \"latitude\": 0.0 }\n",
+      "    :param start_date:\n",
+      "        Start date for when a scene has been acquired\n",
+      "    :param end_date:\n",
+      "        End date for when a scene has been acquired\n",
+      "    :where:\n",
+      "        Dictionary representing key/values for finer grained conditional\n",
+      "        queries. Only a subset of metadata fields are supported. Available\n",
+      "        fields depend on the value of `dataset`, and maybe be found by\n",
+      "        submitting a dataset_filters query.\n",
+      "    :max_results:\n",
+      "        Maximum results returned by the server\n",
+      "    :starting_number:\n",
+      "        Starting offset for results of a query.\n",
+      "    :sort_order:\n",
+      "        Order in which results are sorted. Ascending or descending w.r.t the acquisition date.\n",
+      "    :api_key:\n",
+      "        API key for EROS. Required for searching.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(api.scene_search)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbb61ef7-5073-435b-86aa-0b29958ab6d7",
+   "metadata": {},
+   "source": [
+    "For the scene searches in this study we are going to need the following:\n",
+    "- Dataset ID (dataset)\n",
+    "- Latitude and Longitude (lat and lng)\n",
+    "- Earth Explorer allows us to create a bounding box to get available images that cover those areas (ll and ur - Lower left corner and Upper Right corner for the bounding box respectively)\n",
+    "- Start and End date (start_date and end_date)\n",
+    "- Max Results incase there are multiple available images (max_results)\n",
+    "- The extracted Api key (api_key)\n",
+    "\n",
+    "Future adaptations could include filtering image selection based on cloud coverage to ensure that images used are cloud free."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da245fc5-9ae6-49b5-bb02-fc13ed3f74be",
+   "metadata": {},
+   "source": [
+    "We are going to use dataset_search to identify what Landsat datasets are available and importantly the exact 'dataset' which we will use to download and extract the specific scenes needed for this study"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "754893d4-0e23-4b73-900d-e891100fa5f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "esat_etm_nopan\n",
+      "esat_etm_pan\n",
+      "ortho_mosaic_etm\n",
+      "geos_5_fp_it\n",
+      "geos_5_it\n",
+      "lima\n",
+      "landsat_mss_c2_l1\n",
+      "landsat_tm_c2_l1\n",
+      "landsat_tm_c2_l2\n",
+      "landsat_ba_tile_c2\n",
+      "landsat_dswe_tile_c2\n",
+      "landsat_fsca_tile_c2\n",
+      "landsat_fsca_tile_stat_c2\n",
+      "landsat_ard_tile_c2\n",
+      "landsat_etm_c2_l1\n",
+      "landsat_etm_c2_l2\n",
+      "landsat_ot_c2_l1\n",
+      "landsat_ot_c2_l2\n",
+      "landsat_band_files_c2_l1\n",
+      "landsat_band_files_c2_l2\n",
+      "lima_mosaic\n",
+      "merra_2_c2\n",
+      "ortho_mss_scene\n",
+      "mss_film\n",
+      "rbv_film\n",
+      "sys_etm\n",
+      "esat_tm\n",
+      "tm_film\n",
+      "ortho_mosaic\n",
+      "viirs_atmos\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Landsat imagery comes from the EarthExplorer dataset (node), we will do a search and print out all Landsat datasets in the Earth Explorer node\n",
+    "satellite_avail = api.dataset_search(\"landsat\", \"EE\", api_key=api_key)\n",
+    "for dataset in satellite_avail['data']:\n",
+    "        print(dataset['datasetAlias'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec40fd37-86bc-4fff-bc5c-f6c72781e9a0",
+   "metadata": {},
+   "source": [
+    "All available scenes are printed above. In this project we are going to use the 'landsat_mss_c2_l1' (1985), 'landsat_tm_c2_l1' (~2004) and the 'landsat_ot_c2_l1' (2024) datasets to acquire imagery of the selected glacier mountainscapes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "698529b7-ce26-4c4a-8b3f-a60c2d2e5928",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'requestId': 1982787590,\n",
+       "{'requestId': 1984598599,\n",
        " 'version': 'stable',\n",
-       " 'sessionId': 314954733,\n",
+       " 'sessionId': 315040452,\n",
        " 'data': None,\n",
        " 'errorCode': None,\n",
        " 'errorMessage': None}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Logs out the existing USGS account for the script\n",
     "api.logout()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d19abfe-e88a-474a-ba4e-0c6acf75e9d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
