Updated Kenai Mountains 1986 script
Edits included
updating the scene search
adding download options search
adding dataset download code
added extra modules to create folders in the script for the landsat images
Began to set up the file extract and landsat image builder

--- a/GlacierAreaEstimateCalculator.ipynb
+++ b/GlacierAreaEstimateCalculator.ipynb
@@ -51,17 +51,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7b030732-c4ea-4001-8c2f-b27816d32d24",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import usgs"
+    "import usgs\n",
+    "import os\n",
+    "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9776fd66-36ca-471d-a2ba-75fb59e82ea0",
    "metadata": {},
    "outputs": [],
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e34fb1c7-40d7-4863-aed3-8284108cf66d",
    "metadata": {},
    "outputs": [],
@@ -99,52 +101,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "fc7dc9bf-dc07-4847-bff9-bf5737a260ed",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function scene_search in module usgs.api:\n",
-      "\n",
-      "scene_search(dataset, max_results=5000, metadata_type=None, start_date=None, end_date=None, ll=None, ur=None, lat=None, lng=None, distance=100, where=None, starting_number=1, sort_order='DESC', api_key=None)\n",
-      "    :param dataset:\n",
-      "        USGS dataset (e.g. EO1_HYP_PUB, LANDSAT_8)\n",
-      "    :param lat:\n",
-      "        Latitude\n",
-      "    :param lng:\n",
-      "        Longitude\n",
-      "    :param distance:\n",
-      "        Distance in meters used to for a radial search\n",
-      "    :param ll:\n",
-      "        Dictionary of longitude/latitude coordinates for the lower left corner\n",
-      "        of a bounding box search. e.g. { \"longitude\": 0.0, \"latitude\": 0.0 }\n",
-      "    :param ur:\n",
-      "        Dictionary of longitude/latitude coordinates for the upper right corner\n",
-      "        of a bounding box search. e.g. { \"longitude\": 0.0, \"latitude\": 0.0 }\n",
-      "    :param start_date:\n",
-      "        Start date for when a scene has been acquired\n",
-      "    :param end_date:\n",
-      "        End date for when a scene has been acquired\n",
-      "    :where:\n",
-      "        Dictionary representing key/values for finer grained conditional\n",
-      "        queries. Only a subset of metadata fields are supported. Available\n",
-      "        fields depend on the value of `dataset`, and maybe be found by\n",
-      "        submitting a dataset_filters query.\n",
-      "    :max_results:\n",
-      "        Maximum results returned by the server\n",
-      "    :starting_number:\n",
-      "        Starting offset for results of a query.\n",
-      "    :sort_order:\n",
-      "        Order in which results are sorted. Ascending or descending w.r.t the acquisition date.\n",
-      "    :api_key:\n",
-      "        API key for EROS. Required for searching.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(api.scene_search)"
    ]
@@ -159,6 +119,7 @@
     "- Latitude and Longitude (lat and lng)\n",
     "- Earth Explorer allows us to create a bounding box to get available images that cover those areas (ll and ur - Lower left corner and Upper Right corner for the bounding box respectively)\n",
     "- Start and End date (start_date and end_date)\n",
+    "- Filters to get the correct images (where) (WRS Path, Cloud Cover, etc.)\n",
     "- Max Results incase there are multiple available images (max_results)\n",
     "- The extracted Api key (api_key)\n",
     "\n",
@@ -175,52 +136,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "754893d4-0e23-4b73-900d-e891100fa5f2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "esat_etm_nopan\n",
-      "esat_etm_pan\n",
-      "ortho_mosaic_etm\n",
-      "geos_5_fp_it\n",
-      "geos_5_it\n",
-      "lima\n",
-      "landsat_mss_c2_l1\n",
-      "landsat_tm_c2_l1\n",
-      "landsat_tm_c2_l2\n",
-      "landsat_ba_tile_c2\n",
-      "landsat_dswe_tile_c2\n",
-      "landsat_fsca_tile_c2\n",
-      "landsat_fsca_tile_stat_c2\n",
-      "landsat_ard_tile_c2\n",
-      "landsat_etm_c2_l1\n",
-      "landsat_etm_c2_l2\n",
-      "landsat_ot_c2_l1\n",
-      "landsat_ot_c2_l2\n",
-      "landsat_band_files_c2_l1\n",
-      "landsat_band_files_c2_l2\n",
-      "lima_mosaic\n",
-      "merra_2_c2\n",
-      "ortho_mss_scene\n",
-      "mss_film\n",
-      "rbv_film\n",
-      "sys_etm\n",
-      "esat_tm\n",
-      "tm_film\n",
-      "ortho_mosaic\n",
-      "viirs_atmos\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Landsat imagery comes from the EarthExplorer dataset (node), we will do a search and print out all Landsat datasets in the Earth Explorer node\n",
-    "satellite_avail = api.dataset_search(\"landsat\", \"EE\", api_key=api_key)\n",
+    "satellite_avail = api.dataset_search(\"landsat\", \"EE\")\n",
     "for dataset in satellite_avail['data']:\n",
-    "        print(dataset['datasetAlias'])"
+    "        print(dataset['datasetAlias']) #Prints out names of all available datasets"
    ]
   },
   {
@@ -228,31 +152,151 @@
    "id": "ec40fd37-86bc-4fff-bc5c-f6c72781e9a0",
    "metadata": {},
    "source": [
-    "All available scenes are printed above. In this project we are going to use the 'landsat_mss_c2_l1' (1985), 'landsat_tm_c2_l1' (~2004) and the 'landsat_ot_c2_l1' (2024) datasets to acquire imagery of the selected glacier mountainscapes."
+    "All available scenes are printed above. In this project we are going to use the 'landsat_tm_c2_l1' (~1985 and ~2004) and the 'landsat_ot_c2_l1' (2024) datasets to acquire imagery of the selected glacier mountainscapes. The next step is to search for the Landsat images that will be used for the study. You can get the Bounding box coordinates and landsat image information on the USGS Earth Explorer website = https://earthexplorer.usgs.gov/. In this study, a set date has been used to get the exact image required, however the date range can be adjusted to get see the available products ether across a range of dates or on different days."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "id": "a783f766-4aa3-4e0d-be1f-c857219a618a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(api.scene_search)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e183f17-d2f9-444f-a882-4f5009c98be6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# In this cell we will use the search function to get the product id of the imager used in the study\n",
+    "results = api.scene_search(\n",
+    "    dataset = \"landsat_tm_c2_l1\", #Landsat dataset used for 1986 image\n",
+    "    lat = 60.09345, # The latitude of the image\n",
+    "    lng = -151.07395, # The longtitude of the image\n",
+    "    ll = {\"longitude\" : -151.7075, \"latitude\" : 59.1140}, # The Latitude and Longtitude of the Lower left corner of the Bounding Box in EE\n",
+    "    ur = {\"longitude\" : -150.1913, \"latitude\" : 59.9276}, # The Latitude and Longtitude of the Upper Right corner of the Bounding Box in EE\n",
+    "    start_date = \"1986-09-11\", # The start date of the search range\n",
+    "    end_date = \"1986-09-13\", # The end date of the search range\n",
+    "    api_key=api_key # The Users Api key\n",
+    ")\n",
+    "#The next lines of script will loop through each 'scene' that appears in the results and will print out the 'entity ID' which will be used in the dataset downlaod.\n",
+    "for scene in results['data']['results']:\n",
+    "    print(\"The Entity ID of the Landsat scene is\",(scene['entityId'])) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc3a80b9-53d9-4d85-807a-22cc08cca1ae",
+   "metadata": {},
+   "source": [
+    "Now that the Entity ID is known we can now download the Band files which we will use to build a false colour composite image of the Kenai Mountains."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96eba491-ffbe-4638-b4f4-95dd69c70c61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This cell will provide the different download options for the Landsat dataset\n",
+    "api.dataset_download_options(\"landsat_tm_c2_l1\")                             "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f279fde6-3acc-46ab-be3f-323088bb53d6",
+   "metadata": {},
+   "source": [
+    "In this study we are going to use the 'Landsat Collection 2 Level-1 Product Bundle' to download all the different bands. The product ID code with the downlaod option will be used in the download request to download zip file into the repository."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d595a472-00ed-44bf-9736-64e8191816e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(api.dataset_download_options)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c21b228a-2a2a-499e-9bc9-348867d92f02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(api.download_request)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f926c7bb-2b14-43ce-8c3b-39e0a9dc19bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ADD DOCSTRINGS FOR THIS CELL\n",
+    "\n",
+    "os.makedirs(\"KenaiMountains1986\", exist_ok=True) # Creates a new folder for the downloaded Landsat images folder\n",
+    "\n",
+    "KM_1986 = api.download_request(\n",
+    "    dataset=\"landsat_tm_c2_l1\",\n",
+    "    entity_id=\"LT50690181986255XXX05\",\n",
+    "    product_id=\"5e83d0a0f94d7d8d\",\n",
+    ")\n",
+    "\n",
+    " # Download the first file\n",
+    "if 'data' in KM_1986 and 'availableDownloads' in KM_1986['data']:\n",
+    "    KM_1986Avail = KM_1986['data']['availableDownloads']\n",
+    "    if KM_1986Avail:\n",
+    "        KM1986downloadurl = KM_1986Avail[0]['url']\n",
+    "        KM_1986File = os.path.join(\"KenaiMountains1986\", f\"LT50690181986255XXX05.tar\")\n",
+    "        KM1986url = requests.get(KM1986downloadurl, stream=True)\n",
+    "        \n",
+    "        with open(KM_1986File, \"wb\") as f:\n",
+    "            for chunk in KM1986url.iter_content(chunk_size=8192):\n",
+    "                if chunk:\n",
+    "                    f.write(chunk)\n",
+    "                    \n",
+    "print(\"Landsat download complete!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "288a90c7-fc67-44cb-a513-335cbe99ca57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(requests.get)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6746db6a-8a7f-4d09-8eb3-8516e975c0a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api.download_options(\n",
+    "    dataset=\"landsat_tm_c2_l1\",\n",
+    "    entity_ids=\"LT50690181986255XXX05\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "698529b7-ce26-4c4a-8b3f-a60c2d2e5928",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'requestId': 1984598599,\n",
-       " 'version': 'stable',\n",
-       " 'sessionId': 315040452,\n",
-       " 'data': None,\n",
-       " 'errorCode': None,\n",
-       " 'errorMessage': None}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Logs out the existing USGS account for the script\n",
     "api.logout()"
