Changes made to docstring and study scope
Study focuses on only the Kenai Mountains rather than multiple mountain glaciers. Instead of the original 3 images being used the study will now use 5 between 1985 - 2024.

Updates to docstrings and markdowns to improve the readability and presentability of the script

--- a/GlacierAreaEstimateCalculator.ipynb
+++ b/GlacierAreaEstimateCalculator.ipynb
@@ -1332,28 +1332,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 124,
    "id": "698529b7-ce26-4c4a-8b3f-a60c2d2e5928",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'requestId': 1989524703,\n",
-       " 'version': 'stable',\n",
-       " 'sessionId': 315305376,\n",
-       " 'data': None,\n",
-       " 'errorCode': None,\n",
-       " 'errorMessage': None}"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Logs out the existing USGS account for the script\n",
+    "# Ensure you log out using this cell whenever you are finished to prevent any issues revisiting or adapting the script\n",
     "api.logout()"
    ]
   },
