--- a/KMGlacierAreaEstimate.ipynb
+++ b/KMGlacierAreaEstimate.ipynb
@@ -2051,7 +2051,8 @@
     "- Applying a NDSI (Normalised Difference Snow Index) as opposed to the normalisation used in this study. This will increase the relability of the Glacier mask results as the normalisation method selects all features that has the set reflectance value. This may include clouds in the image or other objects that aren't snow or ice. This may explain why the results of the study appear to be more irregular as it would be expected for glacier area to decrease overtime.\n",
     "- Selecting cloud free imagery to provide better visibility of glacier snow and ice.\n",
     "- Creating a more accurate Bounding Box, future versions could include creating a consistent bounding box for all images as some scenes will include other feature detected as glacier ice and snow is not apart of the Kenai Mountains study area.\n",
-    "- Generating a shapefile using the imported `shapely` to generate a shapefile which can display the identified glacier area on GIS and Remote Sensing software such as ArcGIS, QGIS, ArcMap, etc."
+    "- Generating a shapefile using the imported `shapely` to generate a shapefile which can display the identified glacier area on GIS and Remote Sensing software such as ArcGIS, QGIS, ArcMap, etc.\n",
+    "- Future versions of the script could make the process of analysing each landsat image easier by bulk downloading and processing images rather than processing each image separately."
    ]
   }
  ],
