--- a/KMGlacierAreaEstimate.ipynb
+++ b/KMGlacierAreaEstimate.ipynb
@@ -77,7 +77,7 @@
    "id": "8fdd68c0-3912-4e0e-985d-248b45b085cd",
    "metadata": {},
    "source": [
-    "To identify and search for the required Landsat scenes in this study the user uses the `api.scene_search()` function as this will be the primary method for getting the correct images before they are downloaded. "
+    "To identify and search for the required Landsat scenes in this study the user uses the `api.scene_search()` function as this will be the primary method for getting the correct Landsat scene ID (`entity_id`) before the images are downloaded. "
    ]
   },
   {
@@ -85,7 +85,7 @@
    "id": "dbb61ef7-5073-435b-86aa-0b29958ab6d7",
    "metadata": {},
    "source": [
-    "For the scene searches in this study the user will use the following:\n",
+    "For the scene searches in this study the user will use the following parameters:\n",
     "- Dataset ID (dataset)\n",
     "- Latitude and Longitude (lat and lng)\n",
     "- Earth Explorer allows the user to create a bounding box to get available images that cover those areas (ll and ur - Lower left corner and Upper Right corner for the bounding box respectively)\n",
@@ -100,7 +100,7 @@
    "id": "da245fc5-9ae6-49b5-bb02-fc13ed3f74be",
    "metadata": {},
    "source": [
-    "The user uses `dataset_search` to identify what Landsat datasets are available and importantly the exact 'dataset' which will be used to download and extract the specific scenes needed for this study"
+    "The user uses `dataset_search` to identify what Landsat datasets are available and importantly the exact `dataset which will be used to download and extract the specific scenes needed for this study"
    ]
   },
   {
@@ -189,11 +189,11 @@
    "id": "f279fde6-3acc-46ab-be3f-323088bb53d6",
    "metadata": {},
    "source": [
-    "In this study the user will use the 'Landsat Collection 2 Level-1 Product Bundle' to download all the different bands. For all downloads in this script, the user will be using the product_id that includes the download system 'ls_zip'. The product ID code with the download option will be used in the download request to download the tar file into the repository. The users downloada all of the datasets as a tarfile as when the images are download from the USGS dataset it combines all images into a single file. If images are downloaded as a zip file it doesn't allow the user to extract the file contents as all images are individually compressed.\n",
+    "In this study the user will use the `Landsat Collection 2 Level-1 Product Bundle` to download all the different bands. For all downloads in this script, the user will be using the `product_id` that includes the download system `ls_zip`. The product ID code with this download option will be used in the download request to download the tar file into the repository. The user will download all the Landsat datasets as a tarfile as when the images are download from the USGS dataset it combines them all into a single file. If images are downloaded as a zip file it doesn't allow the user to extract the file contents as the images are not individually compressed.\n",
     "\n",
-    "Therefore, in this project all images that are downloaded from the USGS are downloaded in the tar file format so that the user can used the tarfile module to easily extract images into the directory folder.\n",
+    "Therefore, in this project all images that are downloaded from the USGS dataset are downloaded in the tar file format so that the user can use the `tarfile` module to easily extract images into the directory folder.\n",
     "\n",
-    "The next cell will download the Landsat band images associated with the entity_id that was acquired from the scene search above. The download_requests functions will return a URL which can be used to download the band file folder to our chosen directory. The user will use this URL to direct our download to the 1986Data folder as a Tar file."
+    "The next cell will download the Landsat band images associated with the `entity_id` that was acquired from the scene search above. The `download_requests` functions will return a URL which can be used to download the band file folder to our chosen directory. The user will use this URL to direct the download into the `1986Data` folder as a Tar file."
    ]
   },
   {
@@ -258,7 +258,7 @@
    "source": [
     "Now that the images for the 1986 dataset have been downloaded the user will build a false colour composite image of the Landsat scene\n",
     "\n",
-    "As part of this the user is going to use Rasterio to open, read and stack the images to create a new 3D array (using NumPY). \n",
+    "As part of this the user is going to use `Rasterio` to open, read and stack the images to create a new 3D array (using `NumPY`). \n",
     "This stack combines the necessary band combination to create a False Colour Composite Image of the Landsat scene.\n",
     "The user will then use matplotlib to present the created False Colour Composite image to ensure that the correct bands have been used and that the stack has been successfull."
    ]
@@ -293,9 +293,9 @@
    "id": "fe3f7a9b-6f17-4a8b-99ba-d50f38a1a5f4",
    "metadata": {},
    "source": [
-    "Now that the False Colour Composite Image has been successfully built. The user will save the image to the 1986Data folder so that it can be trimmed and then used for the glacier mask later in the session.\n",
+    "Now that the False Colour Composite Image has been successfully built. The user will save the image to the `1986Data` folder so that it can be trimmed and then used for the glacier mask later in the session.\n",
     "\n",
-    "The user then updates image profile for the False Colour Composite image using the NIR band as the source, this ensures that the created TIF keeps the same metadata structure as it will be used in the following steps to create a trim and Glacier mask.\n",
+    "The user then updates image profile for the false colour composite image using the NIR band as the source, this ensures that the created TIF keeps the same metadata structure as it will be used in the following steps to create a trim and glacier mask.\n",
     "\n",
     "The metadata in the profile includes:\n",
     "- Pixel Height and Width\n",
@@ -305,7 +305,7 @@
     "\n",
     "The user then updates the Metadata of the new image to include:\n",
     "- The number of bands (as the NIR is a single band)\n",
-    "- dtype (ensures that the image is saved as a TIF)"
+    "- dtype (ensures that the image is saved as a TIF/GeoTiff)"
    ]
   },
   {
@@ -339,9 +339,9 @@
    "id": "a5d26e00-e07c-46c0-9178-7158ff022526",
    "metadata": {},
    "source": [
-    "Now that the Full False Colour Composite Image for the 1986 Landsat scene ahs been successfully created. The user needs to trim the image so that the only area included in the Glacier Mask is the Kenai Mountains.\n",
+    "Now that the Full false Colour Composite Image for the 1986 Landsat scene has been successfully created. The user needs to trim the image so that the only area included in the Glacier Mask is the Kenai Mountains.\n",
     "\n",
-    "This is useful as it prevent Glacier Ice and Snow from adjacent mountains influencing the total Glacier area for the 1986 period.\n",
+    "This is useful as it prevents Glacier Ice and Snow from adjacent mountains influencing the total Glacier area for the 1986 period.\n",
     "\n",
     "To do this the user needs to adjust the bounds (extent) of the Full False Colour Composite Image to only include the Kenai Mountains.\n",
     "\n",
